NAVBAR BANNER SECTION AND PROGRESS SECTION CREATED AND DESIGNED

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
         <div>
             <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full">
+                    <!-- Bonus cart -->
+                    <div class="lg:absolute bg-[#131318] p-8 rounded-2xl max-w-[500px] right-[32px] bottom-[32px] mt-4">
+                        <h3 class="text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h3>
+                        <p class="text-[#ffffff99] text-base font-medium leading-7">Hockey games, a fusion of power and
+                            finesse,
+                            showcase teamwork, precision shots, and dynamic athleticism.</p>
+                    </div>
                     <img src="Images/1.png" class="w-full max-h-[720px]" />
                     <div class="absolute flex gap-4 left-8 bottom-8">
                         <a href="#slide4" class="btn btn-circle bg-[#131318] text-[#fff] border-none">❮</a>
@@ -96,6 +103,13 @@
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full max-h-[720px]">
+                    <!-- Bonus cart -->
+                    <div class="lg:absolute bg-[#131318] p-8 rounded-2xl max-w-[500px] right-[32px] bottom-[32px] mt-4">
+                        <h3 class="text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h3>
+                        <p class="text-[#ffffff99] text-base font-medium leading-7">Hockey games, a fusion of power and
+                            finesse,
+                            showcase teamwork, precision shots, and dynamic athleticism.</p>
+                    </div>
                     <img src="Images/2.png" class="w-full" />
                     <div class="absolute flex gap-4 left-8 bottom-8">
                         <a href="#slide1" class="btn btn-circle bg-[#131318] text-[#fff] border-none">❮</a>
@@ -103,6 +117,13 @@
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full max-h-[720px]">
+                    <!-- Bonus cart -->
+                    <div class="lg:absolute bg-[#131318] p-8 rounded-2xl max-w-[500px] right-[32px] bottom-[32px] mt-4">
+                        <h3 class="text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h3>
+                        <p class="text-[#ffffff99] text-base font-medium leading-7">Hockey games, a fusion of power and
+                            finesse,
+                            showcase teamwork, precision shots, and dynamic athleticism.</p>
+                    </div>
                     <img src="Images/3.png" class="w-full" />
                     <div class="absolute flex gap-4 left-8 bottom-8">
                         <a href="#slide2" class="btn btn-circle bg-[#131318] text-[#fff] border-none">❮</a>
@@ -110,6 +131,13 @@
                     </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full max-h-[720px]">
+                    <!-- Bonus cart -->
+                    <div class="lg:absolute bg-[#131318] p-8 rounded-2xl max-w-[500px] right-[32px] bottom-[32px] mt-4">
+                        <h3 class="text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h3>
+                        <p class="text-[#ffffff99] text-base font-medium leading-7">Hockey games, a fusion of power and
+                            finesse,
+                            showcase teamwork, precision shots, and dynamic athleticism.</p>
+                    </div>
                     <img src="Images/4.png" class="w-full" />
                     <div class="absolute flex gap-4 left-8 bottom-8">
                         <a href="#slide3" class="btn btn-circle bg-[#131318] text-[#fff] border-none">❮</a>
@@ -117,12 +145,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Bonus cart -->
-            <div class="lg:absolute bg-[#131318] p-8 rounded-2xl max-w-[500px] right-[13%] bottom-[15%] mt-4">
-                <h3 class="text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h3>
-                <p class="text-[#ffffff99] text-base font-medium leading-7">Hockey games, a fusion of power and finesse,
-                    showcase teamwork, precision shots, and dynamic athleticism.</p>
-            </div>
+
 
         </div>
 
@@ -139,7 +162,7 @@
         </section>
         <!-- CLUB SECTION END -->
         <!-- REDIAL SECTION START-->
-        <section>
+        <section class="mb-10 lg:mb-24">
             <div class="flex flex-col lg:flex-row items-center justify-evenly mt-12">
                 <div class="text-center">
                     <div class="radial-progress text-red-500 text-3xl font-extrabold mb-6 "
@@ -155,7 +178,8 @@
                         style="--value:95; --size:12rem; --thickness: 1rem;" role="progressbar">95%</div>
                     <div>
                         <h3 class="text-[#131318] text-xl font-semibold">Experienced Coach</h3>
-                        <p class="text-[#13131899] text-base leading-7">Exciting hockey matches showcase precision, power, and dynamic athleticism on ice.</p>
+                        <p class="text-[#13131899] text-base leading-7">Exciting hockey matches showcase precision,
+                            power, and dynamic athleticism on ice.</p>
                     </div>
                 </div>
                 <div class="text-center mt-6">
@@ -163,21 +187,32 @@
                         style="--value:90; --size:12rem; --thickness: 1rem;" role="progressbar">90%</div>
                     <div>
                         <h3 class="text-[#131318] text-xl font-semibold">Senior Player</h3>
-                        <p class="text-[#13131899] text-base leading-7">Icy arenas host exhilarating hockey clashes, featuring agile skaters and strategic maneuvers.</p>
+                        <p class="text-[#13131899] text-base leading-7">Icy arenas host exhilarating hockey clashes,
+                            featuring agile skaters and strategic maneuvers.</p>
                     </div>
                 </div>
-                <div class="text-center mt-6">
+                <div class="text-center mt-6  ">
                     <div class="radial-progress text-blue-500 text-3xl font-extrabold mb-6"
                         style="--value:80; --size:12rem; --thickness: 1rem;" role="progressbar">80%</div>
                     <div>
                         <h3 class="text-[#131318] text-xl font-semibold">Training Ground</h3>
-                        <p class="text-[#13131899] text-base leading-7">Intense battles unfold in hockey games, combining finesse, strategy, and competitive spirit</p>
+                        <p class="text-[#13131899] text-base leading-7">Intense battles unfold in hockey games,
+                            combining finesse, strategy, and competitive spirit</p>
                     </div>
                 </div>
 
             </div>
         </section>
         <!-- REDIAL SECTION END-->
+        <!-- PROGRAM DESCRIPTION SECTION START -->
+        <section class="pt-8 border-t-2 pb-8 border-b-2 border-dashed">
+            <!-- program title -->
+            <div class="text-center">
+                <h3 class="text-[#131318] text-4xl font-extrabold mb-6">Program Sections</h3>
+                <p class="text[#13131899] text-base font-medium leading-7">In hockey games, the clash of sticks, thunderous slap shots, <br>and goalie heroics paint a riveting canvas of sport.</p>
+            </div>
+        </section>
+        <!-- PROGRAM DESCRIPTION SECTION END -->
 
     </main>
     <footer></footer>
