client section and form section created

--- a/index.html
+++ b/index.html
@@ -593,6 +593,69 @@
             </div>
 
         </section>
+        <!-- CLIENTS QUESTION SECTION END-->
+        <!-- GET IN TOUCH DESCRIPTION SECTION START-->
+        <section class="pt-8 border-t-2 pb-8 border-b-2 border-dashed mb-12">
+            <div class="text-center">
+                <h3 class="text-[#131318] text-4xl font-extrabold mb-6">Get In Touch</h3>
+                <p class="text[#13131899] text-base font-medium leading-7">From agile skaters to strategic brilliance, hockey games deliver thrilling narratives.</p>
+            </div>
+        </section>
+        <!-- GET IN TOUCH DESCRIPTION SECTION END-->
+        <!-- GET IN TOUCH SECTION START-->
+        <section class="mb-10 lg:mb-24">
+            <!-- grid -->
+            <div class="lg:grid grid-cols-7 gap-6">
+                <div class="border rounded-2xl col-span-3 mb-5">
+                    <div class="p-12">
+                        <div class="bg-lime-50 p-11 rounded-2xl mb-6">
+                            <img src="Images/phone.png" alt="">
+                            <p class="text-[#13131866] text-base leading-8">Phone Number :</p>
+                            <p class="text-[#131318] text-lg font-extrabold leading-8">(+62) 123-321-543</p>
+                        </div>
+                        <div class="bg-orange-50 p-11 rounded-2xl mb-6">
+                            <img src="Images/email.png" alt="">
+                            <p class="text-[#13131866] text-base leading-8">Email : </p>
+                            <p class="text-[#131318] text-lg font-extrabold leading-8">hockeys@support.com</p>
+                        </div>
+                        <div class="bg-blue-50 p-11 rounded-2xl">
+                            <img src="Images/map.png" alt="">
+                            <p class="text-[#13131866] text-base leading-8">Location :</p>
+                            <p class="text-[#131318] text-lg font-extrabold leading-8">152/1 Mohakhali Wireless Gate</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- form -->
+                <div class="col-span-4">
+                    <!-- grid -->
+                    <div class="lg:grid grid-cols-6 gap-6">
+                        <div class="col-span-3">
+                            <h3 class="text-[#131318] text-xl font-bold mb-4">Your Name</h3>
+                            <input type="text" placeholder="Enter your full name" class="input bg-[#13131805]  w-full h-[64px]" />
+                        </div>
+                        <div class="col-span-3">
+                            <h3 class="text-[#131318] text-xl font-bold mb-4">Your Email</h3>
+                            <input type="text" placeholder="Enter your email" class="input bg-[#13131805]  w-full h-[64px]" />
+                        </div>
+                        <div class="col-span-3">
+                            <h3 class="text-[#131318] text-xl font-bold mb-4">Subject</h3>
+                            <input type="text" placeholder="Enter your subject" class="input bg-[#13131805]  w-full h-[64px]" />
+                        </div>
+                        <div class="col-span-3">
+                            <h3 class="text-[#131318] text-xl font-bold mb-4">Phone Number</h3>
+                            <input type="text" placeholder="Enter your phone number" class="input bg-[#13131805] w-full h-[64px]" />
+                        </div>
+                        <div class="col-span-6">
+                            <h3 class="text-[#131318] text-xl font-bold mb-4">Message</h3>
+                            <textarea class="textarea bg-[#13131805] w-full h-[370px]" placeholder="Write your message"></textarea>
+                        </div>
+                        <button class="btn col-span-6 text-white bg-redton">Send Message</button>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 
