some title correction - in program section

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="hero-overlay bg-opacity-60 rounded-2xl brightness-0"></div>
                         <div class="hero-content  text-neutral-content">
                             <div class="pl-10 pt-24 px-10 pb-10">
-                                <h1 class="mb-4 text-3xl font-extrabold">Junior Program</h1>
+                                <h1 class="mb-4 text-3xl font-extrabold">Teenager Program</h1>
                                 <p class="mb-4 text-base leading-6">Hockey games thrill fans with lightning-fast plays,
                                     powerful shots, and strategic brilliance.Intense rivalries, precise passes, and
                                     iconic goals define the drama on the icy battleground.</p>
@@ -244,7 +244,7 @@
                         <div class="hero-overlay bg-opacity-60 rounded-2xl brightness-0"></div>
                         <div class="hero-content  text-neutral-content">
                             <div class="lg:absolute left-0 bottom-0 pl-10 pb-10 max-w-[520px]">
-                                <h1 class="mb-4 text-3xl font-extrabold">Junior Program</h1>
+                                <h1 class="mb-4 text-3xl font-extrabold">Professional Program</h1>
                                 <p class="mb-4 text-base leading-6">Hockey games thrill fans with lightning-fast plays,
                                     powerful shots, and strategic brilliance.Intense rivalries, precise passes, and
                                     iconic goals define the drama on the icy battleground.</p>
